--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -5,5 +5,12 @@ add_compile_definitions(PROJECT_NAME="${PROJECT_NAME}" PROJECT_DIR="${CMAKE_CURR
 
 add_library(engine
         Mesh.h Mesh.cpp
-        Material.h Material.cpp
+        Material.h
+        ColorMaterial.h ColorMaterial.cpp
+        texture.h texture.cpp
+        PhongMaterial.h PhongMaterial.cpp
+        Light.h
+        mesh_loader.h mesh_loader.cpp
         )
+
+target_link_libraries(engine PUBLIC objreader)
